app/assets/stylesheets/tasks.css.scss
// Place all the styles related to the Tasks controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#flash_notice {
  background: red;
  color: white;
  padding: 5px;
  border: solid 1px darken(red, 20%);
  border-radius: 5px;
  text-align: center;
}

#content {
  padding: 5px;
  font-family: sans-serif;
  text-align: left;
  background: ivory;
  border: solid 2px brown;
  border-radius: 10px;
}

#legend {
  padding-top: 20px;
  padding-left: 32px;
  padding-bottom: 2px;
  border-bottom: 1px solid black;
  margin-bottom: 5px;
  font-size: 120%
}

#title { padding-left: 40px; }

#title a { 
  text-decoration: none; 
  border-bottom: 1px solid black;
  color: darken(sienna, 15%);
}

#subtitle { padding-left: 40px; }

form { padding-left: 40px; }

body {
  margin: 10px;
  background: sienna;
}

h1 {
  font-family: Times;
  padding-left: 40px;
}


li { list-style-type: none; }
label { display: none; }

